--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata: 
-  name: k8demo
+  name: k8jenkinsdemo
   namespace: default
 spec: 
   replicas: 2
@@ -16,18 +16,18 @@ spec:
     spec: 
       containers: 
         - 
-          image: vishnu-devops20/dockerapp:latest
-          name: k8demo
+          image: gcr.io/zinc-gist-283714/dockerapp
+          name: k8jenkinsdemo
 --- 
 apiVersion: v1
 kind: Service
 metadata: 
-  name: k8demo
+  name: k8jenkinsdemo
   namespace: default
 spec: 
   ports: 
     - 
-      port: 8008
+      port: 8002
       targetPort: 8080
   selector: 
     bb: web
